lang.java.statics.test/tests/positive/interfaces/implementswithcovariantreturn.yes.javtest
STATIX ok
JAVAC  ok

[I]
interface I {
  public A m();
}

[A]
class A implements I {
  public B m() {
    return null;
  }
}

[B]
class B extends A {}
