lang.java.statics.test/tests/negative/interfaces/implementswithcontravariantreturn.no.javtest
STATIX fail java\.subtype\.sub-type
JAVAC  fail m.* in A cannot implement m.* in I

[I]
interface I {
  public B m();
}

[A]
class A implements I {
  public A m() {
    return null;
  }
}

[B]
class B extends A {}
